force-app/main/default/objects/BWP_Product__c/BWP_Product__c.object-meta.xml
<CustomObject>
    <label>BWP Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BWP Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>