force-app/main/default/objects/BWP_Product__c/fields/Created_Via__c.field-meta.xml
<CustomField>
    <fullName>Created_Via__c</fullName>
    <label>Created Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>