force-app/main/default/objects/BWP_Product__c/fields/Processor_Id__c.field-meta.xml
<CustomField>
    <fullName>Processor_Id__c</fullName>
    <externalId>true</externalId>
    <label>Processor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>