force-app/main/default/objects/BWP_Product__c/fields/Processor_Type__c.field-meta.xml
<CustomField>
    <fullName>Processor_Type__c</fullName>
    <label>Processor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>