force-app/main/default/objects/BWP_Product__c/fields/Product_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Full__c</fullName>
    <label>Product Name (Full)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>