force-app/main/default/objects/BWP_Product__c/fields/Updated_Date_in_Processor__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date_in_Processor__c</fullName>
    <label>Updated Date in Processor</label>
    <type>DateTime</type>
</CustomField>